--- a/CodeBook.html
+++ b/CodeBook.html
@@ -110,6 +110,390 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 <td align="left">num</td>
 <td align="left">-0.04051395..-0.001308288</td>
 </tr>
+<tr class="odd">
+<td align="left">tBodyAccMeanZ</td>
+<td align="left">Body Acceleration Signal Mean (Z axis)</td>
+<td align="left">num</td>
+<td align="left">-0.1525139..-0.07537847</td>
+</tr>
+<tr class="even">
+<td align="left">tGravityAccMeanX</td>
+<td align="left">Gravity Acceleration Signal Mean (X axis)</td>
+<td align="left">num</td>
+<td align="left">-0.6800432..0.9745087</td>
+</tr>
+<tr class="odd">
+<td align="left">tGravityAccMeanY</td>
+<td align="left">Gravity Acceleration Signal Mean (Y axis)</td>
+<td align="left">num</td>
+<td align="left">-0.4798948..0.9565938</td>
+</tr>
+<tr class="even">
+<td align="left">tGravityAccMeanZ</td>
+<td align="left">Gravity Acceleration Signal Mean (Z axis)</td>
+<td align="left">num</td>
+<td align="left">-0.4950887..0.957873</td>
+</tr>
+<tr class="odd">
+<td align="left">tBodyAccJerkMeanX</td>
+<td align="left">Acceleration Jerk Signal Mean (X axis)</td>
+<td align="left">num</td>
+<td align="left">0.0426881..0.130193</td>
+</tr>
+<tr class="even">
+<td align="left">tBodyAccJerkMeanY</td>
+<td align="left">Acceleration Jerk Signal Mean (Y axis)</td>
+<td align="left">num</td>
+<td align="left">-0.03868721..0.05681859</td>
+</tr>
+<tr class="odd">
+<td align="left">tBodyAccJerkMeanZ</td>
+<td align="left">Acceleration Jerk Signal Mean (Z axis)</td>
+<td align="left">num</td>
+<td align="left">-0.06745839..0.03805336</td>
+</tr>
+<tr class="even">
+<td align="left">tBodyGyroMeanX</td>
+<td align="left">Angular Jerk Signal Mean (X axis)</td>
+<td align="left">num</td>
+<td align="left">-0.2057754..0.1927045</td>
+</tr>
+<tr class="odd">
+<td align="left">tBodyGyroMeanY</td>
+<td align="left">Angular Jerk Signal Mean (Y axis)</td>
+<td align="left">num</td>
+<td align="left">-0.2042054..0.02747076</td>
+</tr>
+<tr class="even">
+<td align="left">tBodyGyroMeanZ</td>
+<td align="left">Angular Jerk Signal Mean (Z axis)</td>
+<td align="left">num</td>
+<td align="left">-0.0724546..0.1791021</td>
+</tr>
+<tr class="odd">
+<td align="left">tBodyGyroJerkMeanX</td>
+<td align="left">Average of Acc. and Ang. Jerk signals Mean (X axis)</td>
+<td align="left">num</td>
+<td align="left">-0.1572125..-0.02209163</td>
+</tr>
+<tr class="even">
+<td align="left">tBodyGyroJerkMeanY</td>
+<td align="left">Average of Acc. and Ang. Jerk signals Mean (Y axis)</td>
+<td align="left">num</td>
+<td align="left">-0.07680899..-0.01320228</td>
+</tr>
+<tr class="odd">
+<td align="left">tBodyGyroJerkMeanZ</td>
+<td align="left">Average of Acc. and Ang. Jerk signals Mean (Z axis)</td>
+<td align="left">num</td>
+<td align="left">-0.09249985..-0.006940664</td>
+</tr>
+<tr class="even">
+<td align="left">tBodyAccMagMean</td>
+<td align="left">Magnitude of Body Acceleration Mean</td>
+<td align="left">num</td>
+<td align="left">-0.9864932..0.6446043</td>
+</tr>
+<tr class="odd">
+<td align="left">tGravityAccMagMean</td>
+<td align="left">Magnitutde of Gravity Acceleration Mean</td>
+<td align="left">num</td>
+<td align="left">-0.9864932..0.6446043</td>
+</tr>
+<tr class="even">
+<td align="left">tBodyAccJerkMagMean</td>
+<td align="left">Magnitude of Body Acc.jerk Mean</td>
+<td align="left">num</td>
+<td align="left">-0.9928147..0.4344904</td>
+</tr>
+<tr class="odd">
+<td align="left">tBodyGyroMagMean</td>
+<td align="left">Magnitude of Ang. Signal Mean</td>
+<td align="left">num</td>
+<td align="left">-0.9807408..0.4180046</td>
+</tr>
+<tr class="even">
+<td align="left">tBodyGyroJerkMagMean</td>
+<td align="left">Magnitude of Ang. Jerk Signal Mean</td>
+<td align="left">num</td>
+<td align="left">-0.9973225..0.08758166</td>
+</tr>
+<tr class="odd">
+<td align="left">fBodyAccMeanX</td>
+<td align="left">FFT Body Acceleration Signal Mean (X axis)</td>
+<td align="left">num</td>
+<td align="left">-0.9952499..0.537012</td>
+</tr>
+<tr class="even">
+<td align="left">fBodyAccMeanY</td>
+<td align="left">FFT Body Acceleration Signal Mean (Y axis)</td>
+<td align="left">num</td>
+<td align="left">-0.9890343..0.537012</td>
+</tr>
+<tr class="odd">
+<td align="left">fBodyAccMeanZ</td>
+<td align="left">FFT Body Acceleration Signal Mean (Z axis)</td>
+<td align="left">num</td>
+<td align="left">-0.9952499..0.5241877</td>
+</tr>
+<tr class="even">
+<td align="left">fBodyAccJerkMeanX</td>
+<td align="left">FFT Acc. Jerk Signal Mean (X axis)</td>
+<td align="left">num</td>
+<td align="left">-0.9946308..0.4743173</td>
+</tr>
+<tr class="odd">
+<td align="left">fBodyAccJerkMeanY</td>
+<td align="left">FFT Acc. Jerk Signal Mean (Y axis)</td>
+<td align="left">num</td>
+<td align="left">-0.9893988..0.2767169</td>
+</tr>
+<tr class="even">
+<td align="left">fBodyAccJerkMeanZ</td>
+<td align="left">FFT Acc. Jerk Signal Mean (Z axis)</td>
+<td align="left">num</td>
+<td align="left">-0.9920184..0.1577757</td>
+</tr>
+<tr class="odd">
+<td align="left">fBodyGyroMeanX</td>
+<td align="left">FFT Angular Signal Mean (X axis)</td>
+<td align="left">num</td>
+<td align="left">-0.9931226..0.4749624</td>
+</tr>
+<tr class="even">
+<td align="left">fBodyGyroMeanY</td>
+<td align="left">FFT Angular Signal Mean (Y axis)</td>
+<td align="left">num</td>
+<td align="left">-0.9940255..0.328817</td>
+</tr>
+<tr class="odd">
+<td align="left">fBodyGyroMeanZ</td>
+<td align="left">FFT Angular Signal Mean (Z axis)</td>
+<td align="left">num</td>
+<td align="left">-0.9859578..0.4924144</td>
+</tr>
+<tr class="even">
+<td align="left">fBodyAccMagMean</td>
+<td align="left">FFT Magnitude of Body Acc. Signal Mean</td>
+<td align="left">num</td>
+<td align="left">-0.9868006..0.5866376</td>
+</tr>
+<tr class="odd">
+<td align="left">fBodyBodyAccJerkMagMean</td>
+<td align="left">FFT Magnitude of Body Acc. Jerk Signal Mean</td>
+<td align="left">num</td>
+<td align="left">-0.9939983..0.5384048</td>
+</tr>
+<tr class="even">
+<td align="left">fBodyBodyGyroMagMean</td>
+<td align="left">FFT Magnitude Ang. Signal Mean</td>
+<td align="left">num</td>
+<td align="left">-0.9865352..0.2039798</td>
+</tr>
+<tr class="odd">
+<td align="left">fBodyBodyGyroJerkMagMean</td>
+<td align="left">FFT Magnitude Ang. Signal Mean</td>
+<td align="left">num</td>
+<td align="left">-0.9976174..0.1466186</td>
+</tr>
+<tr class="even">
+<td align="left">tBodyAccStdX</td>
+<td align="left">Body Acceleration Signal Std. (X axis)</td>
+<td align="left">num</td>
+<td align="left">-0.9960686..0.6269171</td>
+</tr>
+<tr class="odd">
+<td align="left">tBodyAccStdY</td>
+<td align="left">Body Acceleration Signal Std. (Y axis)</td>
+<td align="left">num</td>
+<td align="left">-0.9902409..0.616937</td>
+</tr>
+<tr class="even">
+<td align="left">tBodyAccStdZ</td>
+<td align="left">Body Acceleration Signal Std. (Z axis)</td>
+<td align="left">num</td>
+<td align="left">-0.9876587..0.6090179</td>
+</tr>
+<tr class="odd">
+<td align="left">tGravityAccStdX</td>
+<td align="left">Gravity Acc. Signal Std. (X axis)</td>
+<td align="left">num</td>
+<td align="left">-0.9967642..-0.8295549</td>
+</tr>
+<tr class="even">
+<td align="left">tGravityAccStdY</td>
+<td align="left">Gravity Acc. Signal Std. (Y axis)</td>
+<td align="left">num</td>
+<td align="left">-0.9942476..-0.6435784</td>
+</tr>
+<tr class="odd">
+<td align="left">tGravityAccStdZ</td>
+<td align="left">Gravity Acc. Signal Std. (Z axis)</td>
+<td align="left">num</td>
+<td align="left">-0.9909572..-0.6101612</td>
+</tr>
+<tr class="even">
+<td align="left">tBodyAccJerkStdX</td>
+<td align="left">Body Acc. Jerk Signal Std. (X axis)</td>
+<td align="left">num</td>
+<td align="left">-0.9946045..0.544273</td>
+</tr>
+<tr class="odd">
+<td align="left">tBodyAccJerkStdY</td>
+<td align="left">Body Acc. Jerk Signal Std. (Y axis)</td>
+<td align="left">num</td>
+<td align="left">-0.9895136..0.3553067</td>
+</tr>
+<tr class="even">
+<td align="left">tBodyAccJerkStdZ</td>
+<td align="left">Body Acc. Jerk Signal Std. (Z axis)</td>
+<td align="left">num</td>
+<td align="left">-0.9932883..0.03101571</td>
+</tr>
+<tr class="odd">
+<td align="left">tBodyGyroStdX</td>
+<td align="left">Body Ang. Signal Std. (X axis)</td>
+<td align="left">num</td>
+<td align="left">-0.9942766..0.2676572</td>
+</tr>
+<tr class="even">
+<td align="left">tBodyGyroStdY</td>
+<td align="left">Body Ang. Signal Std. (Y axis)</td>
+<td align="left">num</td>
+<td align="left">-0.9942105..0.4765187</td>
+</tr>
+<tr class="odd">
+<td align="left">tBodyGyroStdZ</td>
+<td align="left">Body Ang. Signal Std. (Z axis)</td>
+<td align="left">num</td>
+<td align="left">-0.9855384..0.5648758</td>
+</tr>
+<tr class="even">
+<td align="left">tBodyGyroJerkStdX</td>
+<td align="left">Body Ang. Jerk Signal Std. (X axis)</td>
+<td align="left">num</td>
+<td align="left">-0.9965425..0.1791486</td>
+</tr>
+<tr class="odd">
+<td align="left">tBodyGyroJerkStdY</td>
+<td align="left">Body Ang. Jerk Signal Std. (Y axis)</td>
+<td align="left">num</td>
+<td align="left">-0.9970816..0.2959459</td>
+</tr>
+<tr class="even">
+<td align="left">tBodyGyroJerkStdZ</td>
+<td align="left">Body Ang. Jerk Signal Std. (Z axis)</td>
+<td align="left">num</td>
+<td align="left">-0.9953808..0.1932065</td>
+</tr>
+<tr class="odd">
+<td align="left">tBodyAccMagStd</td>
+<td align="left">Magnitude Acc. Signal Std.</td>
+<td align="left">num</td>
+<td align="left">-0.9864645..0.4284059</td>
+</tr>
+<tr class="even">
+<td align="left">tGravityAccMagStd</td>
+<td align="left">Magnitude Gravity Acc. Signal Std.</td>
+<td align="left">num</td>
+<td align="left">-0.9864645..0.4284059</td>
+</tr>
+<tr class="odd">
+<td align="left">tBodyAccJerkMagStd</td>
+<td align="left">Magnitude Acc. Jerk Signal Std.</td>
+<td align="left">num</td>
+<td align="left">-0.9946469..0.4506121</td>
+</tr>
+<tr class="even">
+<td align="left">tBodyGyroMagStd</td>
+<td align="left">Magnitude Ang. Signal Std.</td>
+<td align="left">num</td>
+<td align="left">-0.9813727..0.299976</td>
+</tr>
+<tr class="odd">
+<td align="left">tBodyGyroJerkMagStd</td>
+<td align="left">Magnitude Ang. Jerk Signal Std.</td>
+<td align="left">num</td>
+<td align="left">-0.9976661..0.2501732</td>
+</tr>
+<tr class="even">
+<td align="left">fBodyAccStdX</td>
+<td align="left">FFT Body Acceleration Signal Std. (X axis)</td>
+<td align="left">num</td>
+<td align="left">-0.9966046..0.6585065</td>
+</tr>
+<tr class="odd">
+<td align="left">fBodyAccStdY</td>
+<td align="left">FFT Body Acceleration Signal Std. (Y axis)</td>
+<td align="left">num</td>
+<td align="left">-0.9906804..0.5601913</td>
+</tr>
+<tr class="even">
+<td align="left">fBodyAccStdZ</td>
+<td align="left">FFT Body Acceleration Signal Std. (Z axis)</td>
+<td align="left">num</td>
+<td align="left">-0.9872248..0.6871242</td>
+</tr>
+<tr class="odd">
+<td align="left">fBodyAccJerkStdX</td>
+<td align="left">FFT Body Acceleration Jerk Signal Std. (X axis)</td>
+<td align="left">num</td>
+<td align="left">-0.9950738..0.4768039</td>
+</tr>
+<tr class="even">
+<td align="left">fBodyAccJerkStdY</td>
+<td align="left">FFT Body Acceleration Jerk Signal Std. (Y axis)</td>
+<td align="left">num</td>
+<td align="left">-0.9904681..0.3497713</td>
+</tr>
+<tr class="odd">
+<td align="left">fBodyAccJerkStdZ</td>
+<td align="left">FFT Body Acceleration Jerk Signal Std. (Z axis)</td>
+<td align="left">num</td>
+<td align="left">-0.9931078..-0.006236475</td>
+</tr>
+<tr class="even">
+<td align="left">fBodyGyroStdX</td>
+<td align="left">FFT Body Ang. Signal Std. (X axis)</td>
+<td align="left">num</td>
+<td align="left">-0.9946522..0.1966133</td>
+</tr>
+<tr class="odd">
+<td align="left">fBodyGyroStdY</td>
+<td align="left">FFT Body Ang. Signal Std. (Y axis)</td>
+<td align="left">num</td>
+<td align="left">-0.9943531..0.6462336</td>
+</tr>
+<tr class="even">
+<td align="left">fBodyGyroStdZ</td>
+<td align="left">FFT Body Ang. Signal Std. (Z axis)</td>
+<td align="left">num</td>
+<td align="left">-0.9867253..0.5224542</td>
+</tr>
+<tr class="odd">
+<td align="left">fBodyAccMagStd</td>
+<td align="left">FFT Magnitude Body Acceleration Signal Std.</td>
+<td align="left">num</td>
+<td align="left">-0.9876485..0.1786846</td>
+</tr>
+<tr class="even">
+<td align="left">fBodyBodyAccJerkMagStd</td>
+<td align="left">FFT Magnitude Acceleration Jerk Signal Std.</td>
+<td align="left">num</td>
+<td align="left">-0.9943667..0.3163464</td>
+</tr>
+<tr class="odd">
+<td align="left">fBodyBodyGyroMagStd</td>
+<td align="left">FFT Magnitude Ang. Signal Std.</td>
+<td align="left">num</td>
+<td align="left">-0.9814688..0.2366597</td>
+</tr>
+<tr class="even">
+<td align="left">fBodyBodyGyroJerkMagStd</td>
+<td align="left">FFT Magnitude Ang. Jerk Signal Std.</td>
+<td align="left">num</td>
+<td align="left">-0.9975852..0.2878346</td>
+</tr>
 </tbody>
 </table>
 </div>
