--- a/README.html
+++ b/README.html
@@ -52,447 +52,31 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 
 
 
-<div id="getting-and-cleaning-data-codebook-tidy-dataset-2" class="section level1">
-<h1>Getting And Cleaning Data Codebook (Tidy Dataset 2)</h1>
-<div id="original-source-of-data" class="section level2">
-<h2>Original source of data</h2>
-<p>The original dataset was taken from here <a href="https://d396qusza40orc.cloudfront.net/getdata%2Fprojectfiles%2FUCI%20HAR%20Dataset.zip">https://d396qusza40orc.cloudfront.net/getdata%2Fprojectfiles%2FUCI%20HAR%20Dataset.zip</a> and it contains the accelerometer and gyroscope 3-axial raw signals tAcc-XYZ and tGyro-XYZ.</p>
+<div id="getdata-006" class="section level1">
+<h1>getdata-006</h1>
+<div id="repository-for-coursera-getting-and-cleaning-data-course-project." class="section level4">
+<h4>Repository for Coursera “Getting and Cleaning data” course project.</h4>
+<p>There is only one script file that does all the processing: <code>run_analysis.R.</code>. If you want to run it on your local computer:<br /> 1. Download Samsung data from <a href="https://d396qusza40orc.cloudfront.net/getdata%2Fprojectfiles%2FUCI%20HAR%20Dataset.zip">https://d396qusza40orc.cloudfront.net/getdata%2Fprojectfiles%2FUCI%20HAR%20Dataset.zip</a><br /> 2. Unpack it and put files in the <code>data</code> folder inside of the clonned repository<br /> 3. Modify path in the first line of script setwd(path) and set it to path your clonned repository</p>
 </div>
-<div id="data-transformations" class="section level2">
-<h2>Data transformations</h2>
-<p>Steps that were taken to create a tidy dataset as specified in the requirements.</p>
+<div id="what-the-script-will-do" class="section level4">
+<h4>What the script will do</h4>
+<p>The execution of the script will create a file <code>tidy_dataset2.txt</code> (tidy dataset #2) which will countain data described in details in CodeBook.md.</p>
+</div>
+<div id="how-does-it-work" class="section level4">
+<h4>How does it work</h4>
 <ul>
-<li>Merge training and test data sets (X_train.txt and X_test.txt)</li>
-<li>Added columns for activity codes (from activity_labels.txt)</li>
-<li>Added columns for subjects (from subject_train.txt and subject_test.txt)</li>
-<li>Extracted only the measurements on the mean and standard deviation for each measurement and created first tidy dataset (td1)</li>
-<li>Added column name with activity labels to td1</li>
-<li>Appropriately labels the data set with descriptive variable names (used camelcased notation)</li>
-<li>Created a second (td2), independent tidy data set with the average of each variable for each activity and each subject.</li>
+<li>Read data from <code>data/train/X_train.txt</code> and <code>data/test/X_test.txt</code> and merge it in one table called <code>data</code></li>
+<li>Read activity codes from <code>data/train/y_train.txt</code> and <code>data/test/y_test.txt</code>, merge them and add as a column <code>ActivityCode</code> in <code>data</code></li>
+<li>Read subjects’ codes from <code>data/train/subject_train.txt</code> and <code>data/test/subject_test.txt</code>, merge them and add as a column <code>subject</code> in <code>data</code></li>
+<li>Load feature labels from <code>data/features.txt</code></li>
+<li>Find all features that have “-mean()” and “-std()” in their name. (Those are Means and Stds’. of measurements)</li>
+<li>Create first tidy datasets that contains only previously find columns and also subject and activity labels.</li>
+<li>Read activity labels from <code>data/activity_labels.txt</code></li>
+<li>Use sapply to find activity label for every Activity Code and store the results in <code>activity</code> column in data</li>
+<li>Appropriately label variable names in dataset by renaming <code>-std()</code> and <code>-mean()</code> accordingly. As a result we get camelcased variable names.</li>
+<li>Use <code>aggregate</code> to create a second dataset <code>td2</code> with the average of each variable for each activity and each subject.</li>
+<li>Use <code>write.table</code> to create a file <code>tidy_dataset2.txt</code> that contains required data.</li>
 </ul>
-</div>
-<div id="the-data-tidy-dataset-2" class="section level2">
-<h2>The Data (tidy dataset №2)</h2>
-<table>
-<thead>
-<tr class="header">
-<th align="left">Variable</th>
-<th align="left">Definition</th>
-<th align="left">Type</th>
-<th align="left">Range</th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td align="left">subject</td>
-<td align="left">A person performed activity</td>
-<td align="left">int</td>
-<td align="left">1..30</td>
-</tr>
-<tr class="even">
-<td align="left">activity</td>
-<td align="left">A type of activity performed</td>
-<td align="left">chr</td>
-<td align="left">WALKING<br />WALKING_UPSTAIRS<br />WALKING_DOWNSTAIRS<br />SITTING<br />STANDING<br />LAYING</td>
-</tr>
-<tr class="odd">
-<td align="left">tBodyAccMeanX</td>
-<td align="left">Body Acceleration Signal Mean (X axis)</td>
-<td align="left">num</td>
-<td align="left">0.2215982..0.301461</td>
-</tr>
-<tr class="even">
-<td align="left">tBodyAccMeanY</td>
-<td align="left">Body Acceleration Signal Mean (Y axis)</td>
-<td align="left">num</td>
-<td align="left">-0.04051395..-0.001308288</td>
-</tr>
-<tr class="odd">
-<td align="left">tBodyAccMeanZ</td>
-<td align="left">Body Acceleration Signal Mean (Z axis)</td>
-<td align="left">num</td>
-<td align="left">-0.1525139..-0.07537847</td>
-</tr>
-<tr class="even">
-<td align="left">tGravityAccMeanX</td>
-<td align="left">Gravity Acceleration Signal Mean (X axis)</td>
-<td align="left">num</td>
-<td align="left">-0.6800432..0.9745087</td>
-</tr>
-<tr class="odd">
-<td align="left">tGravityAccMeanY</td>
-<td align="left">Gravity Acceleration Signal Mean (Y axis)</td>
-<td align="left">num</td>
-<td align="left">-0.4798948..0.9565938</td>
-</tr>
-<tr class="even">
-<td align="left">tGravityAccMeanZ</td>
-<td align="left">Gravity Acceleration Signal Mean (Z axis)</td>
-<td align="left">num</td>
-<td align="left">-0.4950887..0.957873</td>
-</tr>
-<tr class="odd">
-<td align="left">tBodyAccJerkMeanX</td>
-<td align="left">Acceleration Jerk Signal Mean (X axis)</td>
-<td align="left">num</td>
-<td align="left">0.0426881..0.130193</td>
-</tr>
-<tr class="even">
-<td align="left">tBodyAccJerkMeanY</td>
-<td align="left">Acceleration Jerk Signal Mean (Y axis)</td>
-<td align="left">num</td>
-<td align="left">-0.03868721..0.05681859</td>
-</tr>
-<tr class="odd">
-<td align="left">tBodyAccJerkMeanZ</td>
-<td align="left">Acceleration Jerk Signal Mean (Z axis)</td>
-<td align="left">num</td>
-<td align="left">-0.06745839..0.03805336</td>
-</tr>
-<tr class="even">
-<td align="left">tBodyGyroMeanX</td>
-<td align="left">Angular Jerk Signal Mean (X axis)</td>
-<td align="left">num</td>
-<td align="left">-0.2057754..0.1927045</td>
-</tr>
-<tr class="odd">
-<td align="left">tBodyGyroMeanY</td>
-<td align="left">Angular Jerk Signal Mean (Y axis)</td>
-<td align="left">num</td>
-<td align="left">-0.2042054..0.02747076</td>
-</tr>
-<tr class="even">
-<td align="left">tBodyGyroMeanZ</td>
-<td align="left">Angular Jerk Signal Mean (Z axis)</td>
-<td align="left">num</td>
-<td align="left">-0.0724546..0.1791021</td>
-</tr>
-<tr class="odd">
-<td align="left">tBodyGyroJerkMeanX</td>
-<td align="left">Average of Acc. and Ang. Jerk signals Mean (X axis)</td>
-<td align="left">num</td>
-<td align="left">-0.1572125..-0.02209163</td>
-</tr>
-<tr class="even">
-<td align="left">tBodyGyroJerkMeanY</td>
-<td align="left">Average of Acc. and Ang. Jerk signals Mean (Y axis)</td>
-<td align="left">num</td>
-<td align="left">-0.07680899..-0.01320228</td>
-</tr>
-<tr class="odd">
-<td align="left">tBodyGyroJerkMeanZ</td>
-<td align="left">Average of Acc. and Ang. Jerk signals Mean (Z axis)</td>
-<td align="left">num</td>
-<td align="left">-0.09249985..-0.006940664</td>
-</tr>
-<tr class="even">
-<td align="left">tBodyAccMagMean</td>
-<td align="left">Magnitude of Body Acceleration Mean</td>
-<td align="left">num</td>
-<td align="left">-0.9864932..0.6446043</td>
-</tr>
-<tr class="odd">
-<td align="left">tGravityAccMagMean</td>
-<td align="left">Magnitutde of Gravity Acceleration Mean</td>
-<td align="left">num</td>
-<td align="left">-0.9864932..0.6446043</td>
-</tr>
-<tr class="even">
-<td align="left">tBodyAccJerkMagMean</td>
-<td align="left">Magnitude of Body Acc.jerk Mean</td>
-<td align="left">num</td>
-<td align="left">-0.9928147..0.4344904</td>
-</tr>
-<tr class="odd">
-<td align="left">tBodyGyroMagMean</td>
-<td align="left">Magnitude of Ang. Signal Mean</td>
-<td align="left">num</td>
-<td align="left">-0.9807408..0.4180046</td>
-</tr>
-<tr class="even">
-<td align="left">tBodyGyroJerkMagMean</td>
-<td align="left">Magnitude of Ang. Jerk Signal Mean</td>
-<td align="left">num</td>
-<td align="left">-0.9973225..0.08758166</td>
-</tr>
-<tr class="odd">
-<td align="left">fBodyAccMeanX</td>
-<td align="left">FFT Body Acceleration Signal Mean (X axis)</td>
-<td align="left">num</td>
-<td align="left">-0.9952499..0.537012</td>
-</tr>
-<tr class="even">
-<td align="left">fBodyAccMeanY</td>
-<td align="left">FFT Body Acceleration Signal Mean (Y axis)</td>
-<td align="left">num</td>
-<td align="left">-0.9890343..0.537012</td>
-</tr>
-<tr class="odd">
-<td align="left">fBodyAccMeanZ</td>
-<td align="left">FFT Body Acceleration Signal Mean (Z axis)</td>
-<td align="left">num</td>
-<td align="left">-0.9952499..0.5241877</td>
-</tr>
-<tr class="even">
-<td align="left">fBodyAccJerkMeanX</td>
-<td align="left">FFT Acc. Jerk Signal Mean (X axis)</td>
-<td align="left">num</td>
-<td align="left">-0.9946308..0.4743173</td>
-</tr>
-<tr class="odd">
-<td align="left">fBodyAccJerkMeanY</td>
-<td align="left">FFT Acc. Jerk Signal Mean (Y axis)</td>
-<td align="left">num</td>
-<td align="left">-0.9893988..0.2767169</td>
-</tr>
-<tr class="even">
-<td align="left">fBodyAccJerkMeanZ</td>
-<td align="left">FFT Acc. Jerk Signal Mean (Z axis)</td>
-<td align="left">num</td>
-<td align="left">-0.9920184..0.1577757</td>
-</tr>
-<tr class="odd">
-<td align="left">fBodyGyroMeanX</td>
-<td align="left">FFT Angular Signal Mean (X axis)</td>
-<td align="left">num</td>
-<td align="left">-0.9931226..0.4749624</td>
-</tr>
-<tr class="even">
-<td align="left">fBodyGyroMeanY</td>
-<td align="left">FFT Angular Signal Mean (Y axis)</td>
-<td align="left">num</td>
-<td align="left">-0.9940255..0.328817</td>
-</tr>
-<tr class="odd">
-<td align="left">fBodyGyroMeanZ</td>
-<td align="left">FFT Angular Signal Mean (Z axis)</td>
-<td align="left">num</td>
-<td align="left">-0.9859578..0.4924144</td>
-</tr>
-<tr class="even">
-<td align="left">fBodyAccMagMean</td>
-<td align="left">FFT Magnitude of Body Acc. Signal Mean</td>
-<td align="left">num</td>
-<td align="left">-0.9868006..0.5866376</td>
-</tr>
-<tr class="odd">
-<td align="left">fBodyBodyAccJerkMagMean</td>
-<td align="left">FFT Magnitude of Body Acc. Jerk Signal Mean</td>
-<td align="left">num</td>
-<td align="left">-0.9939983..0.5384048</td>
-</tr>
-<tr class="even">
-<td align="left">fBodyBodyGyroMagMean</td>
-<td align="left">FFT Magnitude Ang. Signal Mean</td>
-<td align="left">num</td>
-<td align="left">-0.9865352..0.2039798</td>
-</tr>
-<tr class="odd">
-<td align="left">fBodyBodyGyroJerkMagMean</td>
-<td align="left">FFT Magnitude Ang. Signal Mean</td>
-<td align="left">num</td>
-<td align="left">-0.9976174..0.1466186</td>
-</tr>
-<tr class="even">
-<td align="left">tBodyAccStdX</td>
-<td align="left">Body Acceleration Signal Std. (X axis)</td>
-<td align="left">num</td>
-<td align="left">-0.9960686..0.6269171</td>
-</tr>
-<tr class="odd">
-<td align="left">tBodyAccStdY</td>
-<td align="left">Body Acceleration Signal Std. (Y axis)</td>
-<td align="left">num</td>
-<td align="left">-0.9902409..0.616937</td>
-</tr>
-<tr class="even">
-<td align="left">tBodyAccStdZ</td>
-<td align="left">Body Acceleration Signal Std. (Z axis)</td>
-<td align="left">num</td>
-<td align="left">-0.9876587..0.6090179</td>
-</tr>
-<tr class="odd">
-<td align="left">tGravityAccStdX</td>
-<td align="left">Gravity Acc. Signal Std. (X axis)</td>
-<td align="left">num</td>
-<td align="left">-0.9967642..-0.8295549</td>
-</tr>
-<tr class="even">
-<td align="left">tGravityAccStdY</td>
-<td align="left">Gravity Acc. Signal Std. (Y axis)</td>
-<td align="left">num</td>
-<td align="left">-0.9942476..-0.6435784</td>
-</tr>
-<tr class="odd">
-<td align="left">tGravityAccStdZ</td>
-<td align="left">Gravity Acc. Signal Std. (Z axis)</td>
-<td align="left">num</td>
-<td align="left">-0.9909572..-0.6101612</td>
-</tr>
-<tr class="even">
-<td align="left">tBodyAccJerkStdX</td>
-<td align="left">Body Acc. Jerk Signal Std. (X axis)</td>
-<td align="left">num</td>
-<td align="left">-0.9946045..0.544273</td>
-</tr>
-<tr class="odd">
-<td align="left">tBodyAccJerkStdY</td>
-<td align="left">Body Acc. Jerk Signal Std. (Y axis)</td>
-<td align="left">num</td>
-<td align="left">-0.9895136..0.3553067</td>
-</tr>
-<tr class="even">
-<td align="left">tBodyAccJerkStdZ</td>
-<td align="left">Body Acc. Jerk Signal Std. (Z axis)</td>
-<td align="left">num</td>
-<td align="left">-0.9932883..0.03101571</td>
-</tr>
-<tr class="odd">
-<td align="left">tBodyGyroStdX</td>
-<td align="left">Body Ang. Signal Std. (X axis)</td>
-<td align="left">num</td>
-<td align="left">-0.9942766..0.2676572</td>
-</tr>
-<tr class="even">
-<td align="left">tBodyGyroStdY</td>
-<td align="left">Body Ang. Signal Std. (Y axis)</td>
-<td align="left">num</td>
-<td align="left">-0.9942105..0.4765187</td>
-</tr>
-<tr class="odd">
-<td align="left">tBodyGyroStdZ</td>
-<td align="left">Body Ang. Signal Std. (Z axis)</td>
-<td align="left">num</td>
-<td align="left">-0.9855384..0.5648758</td>
-</tr>
-<tr class="even">
-<td align="left">tBodyGyroJerkStdX</td>
-<td align="left">Body Ang. Jerk Signal Std. (X axis)</td>
-<td align="left">num</td>
-<td align="left">-0.9965425..0.1791486</td>
-</tr>
-<tr class="odd">
-<td align="left">tBodyGyroJerkStdY</td>
-<td align="left">Body Ang. Jerk Signal Std. (Y axis)</td>
-<td align="left">num</td>
-<td align="left">-0.9970816..0.2959459</td>
-</tr>
-<tr class="even">
-<td align="left">tBodyGyroJerkStdZ</td>
-<td align="left">Body Ang. Jerk Signal Std. (Z axis)</td>
-<td align="left">num</td>
-<td align="left">-0.9953808..0.1932065</td>
-</tr>
-<tr class="odd">
-<td align="left">tBodyAccMagStd</td>
-<td align="left">Magnitude Acc. Signal Std.</td>
-<td align="left">num</td>
-<td align="left">-0.9864645..0.4284059</td>
-</tr>
-<tr class="even">
-<td align="left">tGravityAccMagStd</td>
-<td align="left">Magnitude Gravity Acc. Signal Std.</td>
-<td align="left">num</td>
-<td align="left">-0.9864645..0.4284059</td>
-</tr>
-<tr class="odd">
-<td align="left">tBodyAccJerkMagStd</td>
-<td align="left">Magnitude Acc. Jerk Signal Std.</td>
-<td align="left">num</td>
-<td align="left">-0.9946469..0.4506121</td>
-</tr>
-<tr class="even">
-<td align="left">tBodyGyroMagStd</td>
-<td align="left">Magnitude Ang. Signal Std.</td>
-<td align="left">num</td>
-<td align="left">-0.9813727..0.299976</td>
-</tr>
-<tr class="odd">
-<td align="left">tBodyGyroJerkMagStd</td>
-<td align="left">Magnitude Ang. Jerk Signal Std.</td>
-<td align="left">num</td>
-<td align="left">-0.9976661..0.2501732</td>
-</tr>
-<tr class="even">
-<td align="left">fBodyAccStdX</td>
-<td align="left">FFT Body Acceleration Signal Std. (X axis)</td>
-<td align="left">num</td>
-<td align="left">-0.9966046..0.6585065</td>
-</tr>
-<tr class="odd">
-<td align="left">fBodyAccStdY</td>
-<td align="left">FFT Body Acceleration Signal Std. (Y axis)</td>
-<td align="left">num</td>
-<td align="left">-0.9906804..0.5601913</td>
-</tr>
-<tr class="even">
-<td align="left">fBodyAccStdZ</td>
-<td align="left">FFT Body Acceleration Signal Std. (Z axis)</td>
-<td align="left">num</td>
-<td align="left">-0.9872248..0.6871242</td>
-</tr>
-<tr class="odd">
-<td align="left">fBodyAccJerkStdX</td>
-<td align="left">FFT Body Acceleration Jerk Signal Std. (X axis)</td>
-<td align="left">num</td>
-<td align="left">-0.9950738..0.4768039</td>
-</tr>
-<tr class="even">
-<td align="left">fBodyAccJerkStdY</td>
-<td align="left">FFT Body Acceleration Jerk Signal Std. (Y axis)</td>
-<td align="left">num</td>
-<td align="left">-0.9904681..0.3497713</td>
-</tr>
-<tr class="odd">
-<td align="left">fBodyAccJerkStdZ</td>
-<td align="left">FFT Body Acceleration Jerk Signal Std. (Z axis)</td>
-<td align="left">num</td>
-<td align="left">-0.9931078..-0.006236475</td>
-</tr>
-<tr class="even">
-<td align="left">fBodyGyroStdX</td>
-<td align="left">FFT Body Ang. Signal Std. (X axis)</td>
-<td align="left">num</td>
-<td align="left">-0.9946522..0.1966133</td>
-</tr>
-<tr class="odd">
-<td align="left">fBodyGyroStdY</td>
-<td align="left">FFT Body Ang. Signal Std. (Y axis)</td>
-<td align="left">num</td>
-<td align="left">-0.9943531..0.6462336</td>
-</tr>
-<tr class="even">
-<td align="left">fBodyGyroStdZ</td>
-<td align="left">FFT Body Ang. Signal Std. (Z axis)</td>
-<td align="left">num</td>
-<td align="left">-0.9867253..0.5224542</td>
-</tr>
-<tr class="odd">
-<td align="left">fBodyAccMagStd</td>
-<td align="left">FFT Magnitude Body Acceleration Signal Std.</td>
-<td align="left">num</td>
-<td align="left">-0.9876485..0.1786846</td>
-</tr>
-<tr class="even">
-<td align="left">fBodyBodyAccJerkMagStd</td>
-<td align="left">FFT Magnitude Acceleration Jerk Signal Std.</td>
-<td align="left">num</td>
-<td align="left">-0.9943667..0.3163464</td>
-</tr>
-<tr class="odd">
-<td align="left">fBodyBodyGyroMagStd</td>
-<td align="left">FFT Magnitude Ang. Signal Std.</td>
-<td align="left">num</td>
-<td align="left">-0.9814688..0.2366597</td>
-</tr>
-<tr class="even">
-<td align="left">fBodyBodyGyroJerkMagStd</td>
-<td align="left">FFT Magnitude Ang. Jerk Signal Std.</td>
-<td align="left">num</td>
-<td align="left">-0.9975852..0.2878346</td>
-</tr>
-</tbody>
-</table>
 </div>
 </div>
 
